# sidecar-deck

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml  publish.yml
agent/: .env.example  README.md  SidecarDeckAgent.bat  SidecarDeckAgent.ps1  agent_models.py  pc_agent.py  pyproject.toml  requirements.txt  sidecar_deck_agent_ctl.py
backend/: .env.example  Dockerfile  README.md  SidecarDeckAgent.ps1  agent.env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  agent.py  config.py  demo.py  main.py  models.py  state.py  weather.py
backend/tests/: test_api.py
docs/: raspberry-pi-kiosk.md  windows-agent-startup.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/nginx/: default.conf.template
frontend/src/: App.tsx  RankedMeterList.tsx  Sparkline.tsx  format.ts  styles.css  types.ts
