[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sidecar-deck-agent"
version = "0.1.0"
description = "Windows PC metrics agent for Sidecar Deck."
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
sidecar-deck-agent = "pc_agent:main"

[project.gui-scripts]
sidecar-deck-agentw = "pc_agent:main"

[tool.setuptools]
py-modules = ["agent_models", "pc_agent"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
